# xml-feed-specs

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
. github/workflows/: deploy-docs.yml
.github/workflows/: ci.yml  deploy-docs.yml
docs/: index.md
docs/fields/: accessory.md  categorytext.md  delivery.md  delivery_date.md  description.md  ean.md  extended_warranty.md  gift.md  heureka_cpc.md  imgurl.md  imgurl_alternative.md  isbn.md  item_id.md  item_type.md  itemgroup_id.md  manufacturer.md  manufacturer_electronic_address.md  manufacturer_postal_address.md  param.md  price_vat.md  product.md  productname.md  sales_voucher.md  special_service.md  url.md  vat.md
src/heureka_generator/: __init__.py  fields.py  generator.py  main.py  models.py
templates/: field.md.j2  index.md.j2
